[package]
name = "starview_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.76"
csv = "1.3.0"
fxhash = "0.2.1"
hdf5 = { git = "https://github.com/cschin/hdf5-rust.git", optional = true } 
ndarray = "0.15.6"
three-d = { version = "0.16.3", features = ["egui_glow", "egui", "egui-gui"] }
three-d-asset = {version = "0.6",features = ["pcd", "http"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"

[features]
default = ["csv_data"]
csv_data = []
hdf5_data = ["dep:hdf5"]


